--- a/pom.xml
+++ b/pom.xml
@@ -87,11 +87,34 @@
 			<scope>test</scope>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/e-iceblue/spire.pdf -->
-<dependency>
-    <groupId>e-iceblue</groupId>
-    <artifactId>spire.pdf</artifactId>
-    <version>9.9.2</version>
-</dependency>
+		<dependency>
+			<groupId>e-iceblue</groupId>
+			<artifactId>spire.pdf</artifactId>
+			<version>9.9.2</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.bitbucket.cowwoc/diff-match-patch -->
+		<dependency>
+			<groupId>org.bitbucket.cowwoc</groupId>
+			<artifactId>diff-match-patch</artifactId>
+			<version>1.2</version>
+		</dependency>
+
+
+		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.14.0</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.apache.lucene/lucene-spellchecker -->
+		<dependency>
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-spellchecker</artifactId>
+			<version>3.6.2</version>
+		</dependency>
+
 
 	</dependencies>
 	<build>
